# iseg_monitor

./: README.md  pyproject.toml
src/iseg_monitor/: __init__.py
src/iseg_monitor/api/: main.py
src/iseg_monitor/conf/: detectors.json
src/iseg_monitor/logger/: main.py
src/iseg_monitor/util/: datachecker.py
