[project]
name = "iseg-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FumiHubCNS", email = "fendo@cns.s.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
]


[project.scripts]
start-logger = "iseg_monitor.logger.main:main"
db-check = "iseg_monitor.util.datachecker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
